added code from skillcrush after checking my work

--- a/index.html
+++ b/index.html
@@ -41,11 +41,28 @@
 
   <main>
 
-    <section>
-      <div>
-      <div>
-        <p>Retreat from the desk, return refreshed.</p>
+    <section class="hero-area">
+      <div class="content-wrapper">
+        <h1>Retreat from the desk, return refreshed.</h1>
       </div>
+    </section>
+
+    <aside>
+      <div class="content-wrapper">
+        <div class="form-description">
+          <h3>Want to join the next retreat?</h3>
+          <p>
+            Find out when we are holding our next retreat and how your company or team can sign up!
+          </p>
+        </div>
+        <div class="form">
+          <h3>Find out more</h3>
+          <input type="text" name="name" value="name@email.com">
+          <input type="button" value="Download Itinerary">
+        </div>
+      </div> <!-- aside content wrapper ends -->
+    </aside>
+
       <div>
         <p>Have the work week you always dreamed of- without the bad wifi.</p>
       </div>
