--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
       </div> <!-- aside content wrapper ends -->
     </aside>
 
+    <section class="features">
+  <div class="content-wrapper">
+    <!-- Add your Features content here -->
+    <article>
+    <p class="fontawesome-icon"></p>
+    <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+</article>
+  </div>
+</section>
+
+<section class="reviews">
+  <div class="content-wrapper">
+  </div>
+</section>
+
       <div>
         <p>Have the work week you always dreamed of- without the bad wifi.</p>
       </div>
