added margins padding and formatting but i am lost

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <header>
     <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"></a>
+        <a href="#"><img src="" alt="unplugged logo">unplugged</a>
         <div class="header-divider"></div>
         <nav>
              <ul>
@@ -75,8 +75,6 @@
 
 <section class="reviews">
   <div class="content-wrapper">
-  </div>
-</section>
 
       <div>
         <p>Have the work week you always dreamed of- without the bad wifi.</p>
@@ -101,10 +99,12 @@
           </div>
         </div>
         <div>
-          <p>Be a better team in 5 days, like these.</p>
+          <p>Be a better team in 5 days, like these.</p><br>
         </div>
+        <div>
         <h1>LaCrue Bottling Co. October 2017</h1>
-        <p>
+      </div>
+
 
 
 
@@ -121,7 +121,7 @@
     <div class="content-wrapper">
         <div class="footer-content">
           <address class="contact">
-            <h1>Contact</h1>
+            <p>Contact</p>
             <p>555-555-5555<p>
               <p>hello@unplugged.com</p>
 
@@ -132,8 +132,7 @@
                 <div class="social-icons">
                     <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                     <!-- other social links here -->
-                </div>
-            </div>
+              </div>
         </div> <!-- footer content ends -->
     </div> <!--footer content-wrapper ends-->
 
