--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,8 @@
   <link rel="..apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="..stylesheet" href="css/normalize.css">
-  <link rel="..stylesheet" href="css/main.css">
+  <link rel="..stylesheet" href="../css/normalize.css">
+  <link rel="..stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -30,7 +30,7 @@
         <div class="header-divider"></div>
         <nav>
              <ul>
-                 <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+                 <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
                  <li><a href="about/index.html" target="_blank">About</a></li>
              </ul>
         </nav>
