--- a/faq/index.html
+++ b/faq/index.html
@@ -16,8 +16,8 @@
   <link rel="..apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="..stylesheet" href="css/normalize.css">
-  <link rel="..stylesheet" href="css/main.css">
+  <link rel="..stylesheet" href="../css/normalize.css">
+  <link rel="..stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -31,7 +31,7 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="index.html">FAQ</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="../about/index.html" target="_blank">About</a></li>
         </ul>
       </nav>
