Css fro about and faq plus querys

--- a/about/index.html
+++ b/about/index.html
@@ -101,6 +101,12 @@
               <p>Social</p>
                 <div class="social-icons">
                     <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                    <p>
+              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+            </p>
                     <!-- other social links here -->
                 </div>
             </div>
@@ -108,6 +114,7 @@
     </div> <!--footer content-wrapper ends-->
 
     <div class="copyright">
+       <p>Copyright 2018 | Unplugged</p>
     </div>
 
   </footer>
