--- a/about/index.html
+++ b/about/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
 
   <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
@@ -29,7 +29,9 @@
 
   <header>
     <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo"></a>
+      <figure>
+        <a href="#"><img src="unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
         <div class="header-divider"></div>
         <nav>
              <ul>
@@ -63,7 +65,9 @@
 </section> <!-- contact-info -->
 
  <section class="map">
-   <figure>,<!-- map goes here --></figure>
+   <figure>
+     <a href="#"><img src="../map.jpg" alt= "map"></a>
+   </figure>
  </section> <!-- add map dummy -->
  <section class="contact-section">
    <div class="content-wrapper">
@@ -103,13 +107,12 @@
             <div class="social">
               <p>Social</p>
                 <div class="social-icons">
-                    <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
                     <p>
-              <a href="https://twitter.com/Skillcrush" target="_blank"></a>
-            </p>
-            <p>
-              <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
-            </p>
+                      <a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                    <p>
+                      <a href="https://twitter.com/Skillcrush" target="_blank"></a></p>
+                   <p>
+                      <a href="https://www.instagram.com/skillcrush/" target="_blank"></a></p>
                     <!-- other social links here -->
                 </div>
             </div>
