--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>unplugged-retreat</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
 
   <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
@@ -15,8 +19,7 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -30,7 +33,9 @@
 
   <header>
     <div class="content-wrapper">
-        <a href="#"><img src="" alt="unplugged logo">unplugged</a>
+      <figure>
+        <a href="#"><img src="unpluggedlogo.png" alt="unplugged logo"></a>
+      </figure>
         <div class="header-divider"></div>
         <nav>
              <ul>
@@ -123,6 +128,9 @@
           <div class="content-wrapper">
             <h2>Be a better team in 5 days, like this one.</h2>
             <article>
+              <figure>
+                <img src="img/unplugged-retreat-lacrue.jpg" alt="Group of happy people at an outdoor retreat.">
+              </figure>
               <div>
                 <h3>LaCrue Bottling Co. October 2018</h3>
                 <p>
@@ -142,22 +150,27 @@
     <div class="content-wrapper">
         <div class="footer-content">
           <address class="contact">
-            <p>Contact</p>
+            <h4>Contact</h4>
             <p>555-555-5555<p>
               <p>hello@unplugged.com</p>
 
            </address>
              </div>
             <div class="social">
-              <p>Social</p>
+              <h4>Social</h4>
                 <div class="social-icons">
-                    <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                    <p>
+                      <a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                    <p>
+                       <a href="https://twitter.com/Skillcrush" target="_blank"></a></p>
+                    <p>
+                       <a href="https://www.instagram.com/skillcrush/" target="_blank"></a></p> </div> <!---is this div needed?-->
                     <!-- other social links here -->
               </div>
         </div> <!-- footer content ends -->
     </div> <!--footer content-wrapper ends-->
 
-    <div class="copyright">
+    <div class="copyright"> <p>Copyright 2018 | Unplugged</p>
     </div>
 
   </footer>
