--- a/about/index.html
+++ b/about/index.html
@@ -15,12 +15,12 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="..manifest" href="site.webmanifest">
-  <link rel="..apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="..stylesheet" href="../css/normalize.css">
-  <link rel="..stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -65,9 +65,11 @@
 </section> <!-- contact-info -->
 
  <section class="map">
+   <div class="map">
    <figure>
-     <a href="#"><img src="../map.jpg" alt= "map"></a>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d227.18688791885506!2d-121.9786715346299!3d36.97548693843551!2m2!1f311.34392710138104!2f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x808e155ad9d35203%3A0x902c647ea1892186!2sSanta%20Cruz%2C%20CA%2095062!5e1!3m2!1sen!2sus!4v1603418057621!5m2!1sen!2sus" width=75% height=75% frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
    </figure>
+ </div>
  </section> <!-- add map dummy -->
  <section class="contact-section">
    <div class="content-wrapper">
