Added fontawesome icons

--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,8 @@
   <title>Unplugged Retreat | About</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/578c867767.js" crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
