--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/578c867767.js" crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -78,6 +80,7 @@
         <div class="features-items">
           <article>
             <p class="fontawesome-icon">
+            <i class="fas fa-campground"></i>
             </p>
             <p class="features-item-description">
               Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
@@ -85,6 +88,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+             <i class="fas fa-bed"></i>
             </p>
             <p class="features-item-description">
               12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
@@ -92,6 +96,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+               <i class="fas fa-utensils"></i>
             </p>
             <p class="features-item-description">
               Private chef team providing on demand meals - just like your team kitchen.
@@ -99,6 +104,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+              <i class="fas fa-shoe-prints"></i>
             </p>
             <p class="features-item-description">
               5 outdoor obstacle courses, including private beach ½ mile from bungalow.
@@ -106,6 +112,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+             <i class="fas fa-smile"></i>
             </p>
             <p class="features-item-description">
               Retreat facilitator to manage your day to day activities so you all get a chance to reset.
@@ -113,6 +120,7 @@
           </article>
           <article>
             <p class="fontawesome-icon">
+               <i class="fas fa-wifi"></i>S
             </p>
             <p class="features-item-description">
               Dedicated computer room for times that you must wifi.
