Added more icons and stuff

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#"><img src="unpluggedlogo.png" alt="unplugged logo"></a>
+        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
       </figure>
         <div class="header-divider"></div>
         <nav>
@@ -168,13 +168,18 @@
               <h4>Social</h4>
                 <div class="social-icons">
                     <p>
-                      <a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+                      <a href="https://www.facebook.com/yoursite" target="_blank">
+                      <i class="fab fa-facebook"></i></a></p>
                     <p>
-                       <a href="https://twitter.com/Skillcrush" target="_blank"></a></p>
+                       <a href="https://twitter.com/Skillcrush" target="_blank">
+                       <i class="fab fa-twitter"></i></a></p>
                     <p>
-                       <a href="https://www.instagram.com/skillcrush/" target="_blank"></a></p> </div> <!---is this div needed?-->
+                       <a href="https://www.instagram.com/skillcrush/" target="_blank">
+                       <i class="fab fa-instagram"></i></a></p> <!---is this div needed?-->
                     <!-- other social links here -->
-              </div>
+
+
+
         </div> <!-- footer content ends -->
     </div> <!--footer content-wrapper ends-->
 
