--- a/about/index.html
+++ b/about/index.html
@@ -111,12 +111,16 @@
             <div class="social">
               <p>Social</p>
                 <div class="social-icons">
-                    <p>
-                      <a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-                    <p>
-                      <a href="https://twitter.com/Skillcrush" target="_blank"></a></p>
-                   <p>
-                      <a href="https://www.instagram.com/skillcrush/" target="_blank"></a></p>
+                  <p>
+                    <a href="https://www.facebook.com/yoursite" target="_blank">
+                    <i class="fab fa-facebook"></i></a></p>
+                  <p>
+                     <a href="https://twitter.com/Skillcrush" target="_blank">
+                     <i class="fab fa-twitter"></i></a></p>
+                  <p>
+                     <a href="https://www.instagram.com/skillcrush/" target="_blank">
+                     <i class="fab fa-instagram"></i></a></p> <!---is this div needed?-->
+                  <!-- other social links here -->
                     <!-- other social links here -->
                 </div>
             </div>
