--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@
               <p>Social</p>
                 <div class="social-icons">
                   <p>
-                    <a href="https://www.facebook.com/yoursite" target="_blank">
+                    <a href="https://www.facebook.com/brad.whipp/" target="_blank">
                     <i class="fab fa-facebook"></i></a></p>
                   <p>
                      <a href="https://twitter.com/Skillcrush" target="_blank">
