--- a/faq/index.html
+++ b/faq/index.html
@@ -83,7 +83,7 @@
           <h4>Social</h4>
           <div class="social-icons">
             <p>
-              <a href="https://www.facebook.com/yoursite" target="_blank">
+              <a href="https://www.facebook.com/brad.whipp/" target="_blank">
               <i class="fab fa-facebook"></i></a></p>
             <p>
                <a href="https://twitter.com/Skillcrush" target="_blank">
