Added my git link

--- a/about/index.html
+++ b/about/index.html
@@ -119,7 +119,10 @@
                      <i class="fab fa-twitter"></i></a></p>
                   <p>
                      <a href="https://www.instagram.com/skillcrush/" target="_blank">
-                     <i class="fab fa-instagram"></i></a></p> <!---is this div needed?-->
+                     <i class="fab fa-instagram"></i></a></p>
+                     <p>
+                        <a href="https://github.com/Bradliness" target="_blank">
+                        <i class="fab fa-gitkraken"></i></a></p><!---is this div needed?-->
                   <!-- other social links here -->
                     <!-- other social links here -->
                 </div>
