--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
                        <a href="https://www.instagram.com/skillcrush/" target="_blank">
                        <i class="fab fa-instagram"></i></a></p> <!---is this div needed?-->
                     <!-- other social links here -->
+                    <p>
+                       <a href="https://github.com/Bradliness" target="_blank">
+                       <i class="fab fa-gitkraken"></i></a></p> <!---is this div needed?-->
+                    <!-- other social links here -->
 
 
 
