--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="header-divider"></div>
         <nav>
              <ul>
-                 <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-                 <li><a href="about/index.html" target="_blank">About</a></li>
+                 <li><a href="faq/index.html">FAQ</a></li>
+                 <li><a href="about/index.html">About</a></li>
              </ul>
         </nav>
     </div>
@@ -195,7 +195,7 @@
 
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <!--<p>Hello world! This is HTML5 Boilerplate.</p> -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
